--- a/index.html
+++ b/index.html
@@ -4,10 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script src="k.js"></script>
+    <title>Movies Website</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <section>
+        <main>
+            <h1>SEARCH YOUR FAVOURITE MOVIES</h1>
+            <div class="s">
+            <input type="text" placeholder="Search here.." id="search">
+            <button>Search</button>
+        </div>
+        </main>
+    <aside>
+        <div class="theme">
+        <input type="radio" name="theme" id="red" >
+        <input type="radio" name="theme" id="green" checked>
+        <input type="radio" name="theme" id="blue">
+        <input type="radio" name="theme"  id="yellow">
+        <input type="radio" name="theme"  id="lightyellow">
+        </div>
+    </aside>
+</section>
+<script src="k.js"></script>
 </body>
 </html>
