--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h1>SEARCH YOUR FAVOURITE MOVIES</h1>
             <div class="s">
             <input type="text" placeholder="Search here.." id="search">
-            <button>Search</button>
+            <button id="sh">Search</button>
         </div>
         </main>
     <aside>
@@ -25,6 +25,8 @@
         <input type="radio" name="theme"  id="lightyellow">
         </div>
     </aside>
+    <article id="m">
+    </article>
 </section>
 <script src="k.js"></script>
 </body>
